grammar.js
    source_file: $ => seq(
      optional($.shebang_line),
      repeat($.file_annotation),
      optional($.package_header),
      repeat($.import_list),
      // In principle, we either parse a Kotlin file (.kt) or a Kotlin script (.kts).
      // Statements cannot appear as top-level constructs in Kotlin files, only in scripts.
      // However, here, we're allowing parsing of both statements and declarations as top level.
      repeat(choice($._top_level_object, $._top_level_statement))
    ),

    _top_level_object: $ => seq($._declaration, optional($._semi)),

    _top_level_statement: $ => seq(
      alias(choice(
        $.assignment,
        $._loop_statement,
        $.expression
      ), $.statement), 
      $._semi,
    ),

    _declaration: $ => choice(
      $.class_declaration,
      $.object_declaration,
      $.function_declaration,
      $.property_declaration,
      // TODO: it would be better to have getter/setter only in
      // property_declaration but it's difficult to get ASI
      // (Automatic Semicolon Insertion) working in the lexer for
      // getter/setter. Indeed, they can also have modifiers in
      // front, which means it's not enough to lookahead for 'get' or 'set' in
      // the lexer, you also need to handle modifier keywords. It is thus
      // simpler to accept them here.
      $.getter,
      $.setter,
      $.type_alias
    ),

    // ==========
    // Classes
    // ==========

    class_declaration: $ => prec.right(seq(
      optional(field('modifiers', $.modifiers)),
      choice("class", seq(optional("fun"), "interface")),
      field('name', $.simple_identifier),
      optional($.type_parameters),
      optional($.primary_constructor),
      optional(seq(":", $._delegation_specifiers)),
      optional($.type_constraints),
      optional(field('body', $.class_body))
    )),

    primary_constructor: $ => seq(
      optional(seq(optional(field('modifiers', $.modifiers)), "constructor")),
      $.class_parameters
    ),

    class_body: $ => seq(
      "{",
      seq(optional($._enum_entries), optional(";")),
      optional($._class_member_declarations),
      "}"
    ),

    class_parameters: $ => seq(
      "(",
      optional(sep1($.class_parameter, ",")),
      optional(","),
      ")"
    ),

    binding_pattern_kind: $ => choice("val", "var"),

    class_parameter: $ => seq(
      optional(field('modifiers', $.modifiers)),
      optional(field('binding_pattern', $.binding_pattern_kind)),
      field('name', $.simple_identifier),
      ":",
      field('type', $._type),
      optional(seq("=", field('initializer', $.expression)))
    ),

    _delegation_specifiers: $ => prec.left(sep1(
      $.delegation_specifier,
      // $._annotated_delegation_specifier, // TODO: Annotations cause ambiguities with type modifiers
      ","
    )),

    delegation_specifier: $ => prec.right(choice(
      $.constructor_invocation,
      $.explicit_delegation,
      $.user_type,
      $.function_type
    )),

    constructor_invocation: $ => seq($.user_type, $.value_arguments),

    type_parameters: $ => seq("<", sep1($.type_parameter, ","), ">"),

    type_parameter: $ => seq(
      optional($.type_parameter_modifiers),
      alias($.simple_identifier, $.type_identifier),
      optional(seq(":", $._type))
    ),

    _class_member_declarations: $ => repeat1(seq($._class_member_declaration, $._semi)),

    companion_object: $ => seq(
      optional(field('modifiers', $.modifiers)),
      "companion",
      "object",
      optional(field('name', $.simple_identifier)),
      optional(seq(":", $._delegation_specifiers)),
      optional(field('body', $.class_body))
    ),

    function_value_parameters: $ => seq(
      "(",
      optional(sep1($.function_value_parameter, ",")),
      optional(","),
      ")"
    ),

    function_value_parameter: $ => seq(
      optional(field('modifiers', $.parameter_modifiers)),
      field('parameter', $.parameter),
      optional(seq("=", field('initializer', $.expression)))
    ),

    function_declaration: $ => prec.right(seq(
      optional(field('modifiers', $.modifiers)),
      "fun",
      optional($.type_parameters),
      optional(seq(field('receiver_type', $.receiver_type), optional('.'))),
      field('name', $.simple_identifier),
      field('parameters', $.function_value_parameters),
      optional(seq(":", field('type', $._type))),
      optional($.type_constraints),
      optional(field('body', $.function_body))
    )),

    function_body: $ => choice($.block, seq("=", field('expression', $.expression))),

    variable_declaration: $ => prec(PREC.VAR_DECL, seq(
      // repeat($.annotation), TODO
      field('id', $.simple_identifier),
      optional(field('type', seq(":", $._type)))
    )),

    property_declaration: $ => prec.right(seq(
      optional(field('modifiers', $.modifiers)),
      $.binding_pattern_kind,
      optional(field('type_parameters', $.type_parameters)),
      optional(seq(field('receiver_type', $.receiver_type), '.')),
      field('var_decl', choice($.variable_declaration, $.multi_variable_declaration)),
      optional(field('type_constraints', $.type_constraints)),
      optional(choice(
        seq("=", field('initializer', $.expression)),
        $.property_delegate
      )),
      optional(';'),
      choice(
        // TODO: Getter-setter combinations
        optional($.getter),
        optional($.setter)
      )
    )),

    getter: $ => prec.right(seq(
      optional(field('modifiers', $.modifiers)),
      "get",
      optional(seq(
        "(", ")",
        optional(seq(":", $._type)),
        $.function_body
      ))
    )),

    parameter: $ => seq(field('name', $.simple_identifier), ":", field('type', $._type)),

    object_declaration: $ => prec.right(seq(
      optional(field('modifiers', $.modifiers)),
      "object",
      field('name', $.simple_identifier),
      optional(seq(":", $._delegation_specifiers)),
      optional(field('body', $.class_body))
    )),

    secondary_constructor: $ => seq(
      optional(field('modifiers', $.modifiers)),
      "constructor",
      field('parameters', $.function_value_parameters),
      optional(seq(":", $.constructor_delegation_call)),
      optional(field('block', $.block))
    ),

    constructor_delegation_call: $ => seq(choice("this", "super"), $.value_arguments),

    // ==========
    // Enum classes
    // ==========

    _enum_entries: $ => prec.left(seq(sep1($.enum_entry, ","), optional(","))),

    enum_entry: $ => seq(
      optional(field('modifiers', $.modifiers)),
      field('name', $.simple_identifier),
      optional(field('arguments', $.value_arguments)),
      optional(field('body', $.class_body))
    ),

    // ==========
    // Types
    // ==========

    _type: $ => seq(
      optional($.type_modifiers),
      choice(
        $.parenthesized_type,
        $.nullable_type,
        $._type_reference,
        $.function_type,
        $.not_nullable_type
      )
    ),

    // Give type reference a higher precedence to resolve conflict with parenthesized expression
    _type_reference: $ => prec(PREC.TYPE_REFERENCE, choice(
      field('type', $.user_type),
      "dynamic"
    )),

    nullable_type: $ => seq(
      choice($._type_reference, $.parenthesized_type),
      repeat1($._quest)
    ),

    _quest: $ => "?",

    user_type: $ => sep1($._simple_user_type, "."),

    _simple_user_type: $ => seq(
      alias($.simple_identifier, $.type_identifier),
      optional($.type_arguments)
    ),

    type_projection: $ => choice(
      seq(optional($.type_projection_modifiers), $._type),
      "*"
    ),

    _statements: $ => seq(
      sep1($.statement, $._semi),
      optional($._semi),
    ),

    statement: $ => choice(
      $._declaration,
      $.assignment,
      $._loop_statement,
      $.expression
    ),

    block: $ => prec(PREC.BLOCK, seq("{", optional($._statements), "}")),

    _loop_statement: $ => choice(
      $.for_statement,
      $.while_statement,
      $.do_while_statement
    ),

    assignment: $ =>
      prec.left(PREC.ASSIGNMENT, seq(
        field('left', $._directly_assignable_expression),
        field('op', choice('=', $._assignment_and_operator)),
        field('right', $.expression))),

    // ==========
    // Expressions
    // ==========

    dot_qualified_expression: $ => prec(PREC.DOT, 
      seq(field('receiver', choice($._primary_expression, $.postfix_expression)), 
      $._member_access_operator,
      field('selector', choice(
        $.simple_identifier,
        $.parenthesized_expression,
        "class"
      ))
    )),

    call_expression: $ => seq(
      field('expression', $._primary_expression), 
      optional($.type_arguments),
      $._call_arguments
      ),

    // Right precedence here to extend the call to the right, i.e., `with (s) { s }`
    // should be parsed as a flat list of arguments. 
    _call_arguments: $ => prec.right(choice(
      seq(optional(field('args', $.value_arguments)), field('lambda_arg', $.annotated_lambda)),
      field('args', $.value_arguments)
    )),
    
    index_access_expression: $ => prec(PREC.INDEX, seq(
      field('expression', $.expression), 
      '[',
      field('index', $.expression),
      repeat(seq(',', $.expression)),
      optional(','),
      ']')
    ),

    additive_expression: $ => prec.left(PREC.ADDITIVE, seq($.expression, $._additive_operator, $.expression)),

    annotated_lambda: $ => seq(
      repeat($.annotation),
      optional($.label),
      $.lambda_literal
    ),

    // Here we're defining a dynamic precedence for type arguments to resolve the ambiguity
    // between the comparison and generic call syntax.
    // Any expression such as a<b>(c) should be resolved in favor of the generic call.
    type_arguments: $ => prec.dynamic(PREC.GENERIC, seq("<", sep1($.type_projection, ","), ">")),

    value_arguments: $ => seq(
      "(",
      optional(
        seq(
          sep1($.value_argument, ","),
          optional(","),
        )
      ),
      ")"
    ),

    value_argument: $ => seq(
      optional($.annotation),
      optional(seq($.simple_identifier, "=")),
      optional("*"),
      $.expression
    ),

    _primary_expression: $ => choice(
      $.parenthesized_expression,
      $.simple_identifier,
      $._literal_constant,
      $.string_literal,
      $.callable_reference,
      $._function_literal,
      $.object_literal,
      $.collection_literal,
      $.this_expression,
      $.super_expression,
      $.when_expression,
      $.try_expression,
      $.dot_qualified_expression,
      $.call_expression,
      $.index_access_expression
    ),

    collection_literal: $ => seq(
      "[", 
      optional(seq(
        $.expression, 
        repeat(seq(",", $.expression)),
        optional(","),
      )),
      "]"
    ),

    string_literal: $ => choice(
      $._line_string_literal,
      $._multi_line_string_literal
    ),

    _line_string_literal: $ => seq(
      '"',
      repeat(choice(
        alias($.line_string_content, $.string_content), 
        alias(DOLLAR_IN_STRING_CONTENT, $.string_content),
        $._interpolation
      )),
      // Need to consume the last '$' character here, and create a node in the tree
      choice('"', seq(alias("$", $.string_content), '"'))
    ),

    _multi_line_string_literal: $ => prec.right(seq(
      '"""',
      repeat(choice(
        alias($.multi_line_string_content, $.string_content), 
        alias(DOLLAR_IN_STRING_CONTENT, $.string_content), 
        QUOTE_IN_MULTI_LINE_STRING_CONTENT,
        $._interpolation,
      )),
      // Need to consume the last '$' character here, and create a node in the tree
      optional(alias("$", $.string_content)),
      '"""',
      repeat('"')
    )),

    lambda_literal: $ => seq(
      "{",
      optional(seq(optional(field('parameters', $.lambda_parameters)), "->")),
      optional(field('body', alias($._statements, $.lambda_body))),
      "}"
    ),

    this_expression: $ => choice(
      "this",
      $._this_at
    ),

    callable_reference: $ => prec(PREC.DOT, seq(
      optional(choice($.user_type, $.this_expression)),
      "::",
      choice($.simple_identifier, "class")
    )),

    _assignment_and_operator: $ => choice("+=", "-=", "*=", "/=", "%="),

    _additive_operator: $ => choice("+", "-"),

    _member_access_operator: $ => choice(".", alias($.safe_nav, '?.')),

    _directly_assignable_expression: $ => prec(
      PREC.ASSIGNMENT,
      choice(
        $.dot_qualified_expression,
        $.index_access_expression,
        $.simple_identifier,
        $.postfix_expression,
      )
    ),

    // ==========
    // Modifiers
    // ==========

    modifiers: $ => repeat1(choice($.annotation, $._modifier)),

    _modifier: $ => choice(
      $.class_modifier,
      $.member_modifier,
      $.visibility_modifier,
      $.function_modifier,
      $.property_modifier,
      $.inheritance_modifier,
      $.parameter_modifier,
      $.platform_modifier
    ),

    class_modifier: $ => choice(
      "enum",
      "sealed",
      "annotation",
      "data",
      "inner",
      "value",
    ),

    member_modifier: $ => choice(
      "override",
      "lateinit"
    ),

    visibility_modifier: $ => choice(
      "public",
      "private",
      "internal",
      "protected"
    ),

    function_modifier: $ => choice(
      "tailrec",
      "operator",
      "infix",
      "inline",
      "external",
      "suspend"
    ),

    property_modifier: $ => "const",

    inheritance_modifier: $ => choice(
      "abstract",
      "final",
      "open"
    ),

    annotation: $ => choice(
      $._single_annotation,
      $._multi_annotation
    ),

    _single_annotation: $ => seq(
      "@",
      optional($.use_site_target),
      $._unescaped_annotation
    ),

    _multi_annotation: $ => seq(
      "@",
      optional($.use_site_target),
      "[",
      repeat1($._unescaped_annotation),
      "]"
    ),

    use_site_target: $ => seq(
      choice("field", "property", "get", "set", "receiver", "param", "setparam", "delegate"),
      ":"
    ),

    simple_identifier: $ => choice(
      $._lexical_identifier,
      "expect",
      "data",
      "inner",
      "value",
      "actual",
      "set",
      "get",
      "annotation"
      // TODO: More soft keywords
    ),

    line_comment: $ => token(prec(PREC.COMMENT, seq('//', /[^\r\n]*/))),

    // ==========
    // Separators and operations
    // ==========


    // ==========
    // Keywords
    // ==========

    _this_at: $ => seq(
      "this@",
      alias($._lexical_identifier, $.type_identifier)
    ),

    integer_literal: $ => token(seq(optional(/[1-9]/), DEC_DIGITS)),

    hex_literal: $ => token(seq("0", /[xX]/, HEX_DIGITS)),

    null_literal: $ => "null",

    // ==========
    // Identifiers
    // ==========

    _lexical_identifier: $ => choice(
      $._alpha_identifier,
      $._backtick_identifier,
    ),
