test/corpus/assignment.txt
================================================================================
This Assignment
================================================================================

class Foo(){
  var foo = null
  constructor(bar:Int) {
    this.foo = bar
  }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (simple_identifier)
    (primary_constructor
      (class_parameters))
    body: (class_body
      (property_declaration
        (binding_pattern_kind)
        var_decl: (variable_declaration
          id: (simple_identifier))
        initializer: (null_literal))
      (secondary_constructor
        parameters: (function_value_parameters
          (function_value_parameter
            parameter: (parameter
              name: (simple_identifier)
              type: (user_type
                (type_identifier)))))
        block: (block
          (statement
            (assignment
              left: (dot_qualified_expression
                receiver: (this_expression)
                selector: (simple_identifier))
              right: (simple_identifier))))))))

================================================================================
Index Assignment
================================================================================

fun main(){
  var listOfPets:Array<String>
  listOfPets[0] = "foo"
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (simple_identifier)
    parameters: (function_value_parameters)
    body: (function_body
      (block
        (statement
          (property_declaration
            (binding_pattern_kind)
            var_decl: (variable_declaration
              id: (simple_identifier)
              type: (user_type
                (type_identifier)
                (type_arguments
                  (type_projection
                    type: (user_type
                      (type_identifier))))))))
        (statement
          (assignment
            left: (index_access_expression
              expression: (simple_identifier)
              index: (integer_literal))
            right: (string_literal
              (string_content))))))))
